<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="Main Menu">
            <menu>
                <item
                    android:id="@+id/option1"
                    android:icon="@drawable/ic_baseline_chevron_right_24"
                    android:title="Option 1" />
                <item
                    android:id="@+id/option2"
                    android:icon="@drawable/ic_baseline_chevron_right_24"
                    android:title="Option 2" />
                <item
                    android:id="@+id/option3"
                    android:icon="@drawable/ic_baseline_chevron_right_24"
                    android:title="Option 3" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="APP">
            <menu>
                <item
                    android:id="@+id/logOut"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />
                <item
                    android:id="@+id/rateUs"
                    android:icon="@drawable/ic_baseline_rate_review_24"
                    android:title="@string/rate_us" />
                <item
                    android:id="@+id/info"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/info" />
            </menu>
        </item>
    </group>
</menu>